--- a/app/assets/stylesheets/offcanvas.css.scss
+++ b/app/assets/stylesheets/offcanvas.css.scss
@@ -1,3 +1,83 @@
+@media screen and (max-width: 767px) {
+  .mo-row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+         -o-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+  }
+
+  .mo-row-offcanvas-right {
+    right: 0;
+  }
+
+  .mo-row-offcanvas-left {
+    left: 0;
+  }
+
+  .mo-row-offcanvas-right
+  .mo-sidebar-offcanvas {
+    right: -90%;
+  }
+
+  .mo-row-offcanvas-left
+  .mo-sidebar-offcanvas {
+    left: -90%;
+  }
+
+  .mo-row-offcanvas-right.active {
+    right: 90%;
+  }
+
+  .mo-row-offcanvas-left.active {
+    left: 90%;
+  }
+
+  .mo-sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+    width: 90%;
+  }
+
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+         -o-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+  }
+
+  .row-offcanvas-right {
+    right: 0;
+  }
+
+  .row-offcanvas-left {
+    left: 0;
+  }
+
+  .row-offcanvas-right
+  .sidebar-offcanvas {
+    right: -90% !important;
+  }
+
+  .row-offcanvas-left
+  .sidebar-offcanvas {
+    left: -90% !important;
+  }
+
+  .row-offcanvas-right.active {
+    right: 90% !important;
+  }
+
+  .row-offcanvas-left.active {
+    left: 90% !important;
+  }
+
+  .sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+    width: 90% !important;
+  }
+}
+
 .row-offcanvas {
   position: relative;
   -webkit-transition: all .25s ease-out;
@@ -15,24 +95,24 @@
 
 .row-offcanvas-right
 .sidebar-offcanvas {
-  right: -50%; /* 6 columns */
+  right: -30%;
 }
 
 .row-offcanvas-left
 .sidebar-offcanvas {
-  left: -50%; /* 6 columns */
+  left: -30%;
 }
 
 .row-offcanvas-right.active {
-  right: 50%; /* 6 columns */
+  right: 30%;
 }
 
 .row-offcanvas-left.active {
-  left: 50%; /* 6 columns */
+  left: 30%;
 }
 
 .sidebar-offcanvas {
   position: absolute;
   top: 0;
-  width: 50%; /* 6 columns */
+  width: 30%;
 }
