--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 
 .a-hide-overflow {
@@ -26,4 +26,9 @@ body {
 
 .list-group-item .badge {
   float: none;
+}
+
+.label-list > li {
+  padding-right: 0;
+  padding-left: 0;
 }
