Show hide organization info.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -11,6 +11,11 @@ body {
   padding-top: 50px;
 }
 
+.ap-horizontal-space {
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
 .a-hide-overflow {
   overflow: hidden;
   text-overflow:ellipsis;
