Prep before notification revamp.

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -6,11 +6,11 @@
   padding-top: 20px;
 }
 
-.pane-frame {
-  border: 1px solid #ddd;
-  border-top-color: transparent;
-}
-
 .muted-link {
   color: #555;
+}
+
+.ap-user-profile-action {
+  height: 100px;
+  width: 100px;
 }
