Notification revamp and user notifications page.

--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -54,7 +54,7 @@
             %a.list-group-item{:href => organization_path(@organization, group: group), :class => ("active" if @group == group)}
               = group.name
               - if group.member?(current_user)
-                = render partial: "shared/badge", locals: {count: current_user.group_conversation_notifications(group).count}
+                = render partial: "shared/badge", locals: {count: current_user.conversation_notifications(group: group).count}
                 .pull-right
                   %i.fa.fa-lg.fa-check-square-o{:title => "You are a member.", :data => {toggle: "tooltip"}}
               - if !group.member?(current_user) && !group.private
