--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,66 +23,46 @@
 
     .tab-content
       .tab-pane.pane#notifications{:class => ("active" if @tab == "notifications")}
-        .row
-          .col-md-offset-1.col-md-10
-            %ul.list-group
-              - if @user.notifications.empty?
-                %li.list-group-item
-                  Congratulations. No unread notifications.
-              - else
-                %li.list-group-item
-                  %a.mark-all-notifications{:href => "#", :title => "Mark all as read", :data => {toggle: "tooltip", ids: @user.notifications.map{|a| a.id}} }
-                    %i.fa.fa-check.fa-2x
-                  #{@user.notifications.count} Notifications
-                - @user.notifications.order(created_at: :desc).each do |notification|
-                  %li.list-group-item
-                    %a.mark-notification{:href => "#", :title => "Mark as read", :data => {toggle: "tooltip", id: notification.id} }
-                      %i.fa.fa-check
-                    %a{:href => user_path(notification.subject)}
-                      #{notification.subject.email}
-                    = render partial: "notifications/#{notification.action}", locals: {notification: notification}
-                    %small
-                      = l notification.created_at, format: :short
-
+        - if @user.notifications.empty?
+          .alert.alert-info
+            Woohoo. Congratulations. No unread notifications.
+        - else
+          %ul.list-group
+            %li.list-group-item
+              %a.mark-all-notifications{:href => "#", :title => "Mark all as read", :data => {toggle: "tooltip", ids: @user.notifications.map{|a| a.id}} }
+                %i.fa.fa-check.fa-2x
+              All Notifications
+              = render partial: "shared/badge", locals: {count: @user.notifications.count}
+            - @user.notifications.group_by{|n| n.organization}.each do |organization, notifications|
+              %li.list-group-item
+                %a.mark-all-notifications{:href => "#", :title => "Mark all as read", :data => {toggle: "tooltip", ids: @user.notifications.map{|a| a.id}} }
+                  %i.fa.fa-check.fa-2x
+                %a{:href => organization_path(organization)}
+                  #{organization.name}
+                = render partial: "shared/badge", locals: {count: notifications.count}
+              - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
+                -# Conversation == nil means notifications are special
+                - if conversation.nil?
+                  - notifications.sort_by{|n| n.created_at}.each do |notification|
+                    %li.list-group-item
+                      %a.mark-notification{:href => "#", :title => "Mark as read", :data => {toggle: "tooltip", id: notification.id} }
+                        %i.fa.fa-check
+                      -# This is a JOIN_GROUP action. Should handle better when we have more actions
+                      #{notification.action.user.email} has joined
+                      %a{:href => organization_path(organization, group: notification.action.actionable)}
+                        #{notification.action.actionable.name}
+                      %small
+                        = l notification.created_at, format: :short
+                - else
+                  - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
+                    %li.list-group-item
+                      %a.mark-notification{:href => "#", :title => "Mark as read", :data => {toggle: "tooltip", ids: notifications.map{|n| n.id}} }
+                        %i.fa.fa-check
+                      #{notifications.map{|n| n.action.user.email}.uniq.join(" ")} has posted to
+                      %a{:href => conversation_path(conversation)}
+                        #{conversation.title}
 
       .tab-pane.pane#timeline{:class => ("active" if @tab == "timeline")}
         .row
-          .col-md-offset-1.col-md-5
-            %h3.text-info
-              = "#{@user.organizations.count} Organizations, #{@user.groups.count} Groups"
-            - @user.memberships_by_org.each do |organization, memberships|
-              %h4
-                %a{:href => organization_path(organization)}
-                  = organization.name
-              .row
-                .col-md-offset-1.col-md-11
-                  %ul.list-unstyled
-                    - memberships.each do |membership|
-                      %li
-                        %a{:href => organization_path(organization, group: membership.group)}
-                          = membership.group.name
-                        %small
-                          = "Joined at #{l membership.created_at, format: :short}"
-
-
-          .col-md-5
-            %h3.text-info
-              = "#{@user.conversations.count} Conversations, #{@user.messages.count} Messages"
-            - @user.conversations.order(created_at: :desc).each do |conversation|
-              .row
-                .col-md-offset-1.col-md-11
-                  %ul.list-unstyled
-                    %li
-                      %a{:href => conversation_path(conversation)}
-                        = conversation.title
-                    %li
-                      %small
-                        Posted to
-                        %a{:href => organization_path(conversation.group.organization, group: conversation.group)}
-                          #{conversation.group.name}
-                        of
-                        %a{:href => organization_path(conversation.group.organization)}
-                          #{conversation.group.organization.name}
-                    %li
-                      %small
-                        = "Started at #{l conversation.created_at, format: :short}"
+          .col-md-offset-1.col-md-10
+            Timeline info to come
