Mobile conversation page.

--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -1,4 +1,4 @@
-.row
+.row.ap-top-space
   - @organizations.each_slice(@organizations.count / 4) do |organizations_group|
     .col-lg-3.col-md-4.col-sm-6
       - organizations_group.each do |organization|
