--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
                 = flash[:notice]
       = yield
     .fade.modal#a-alert{:tabindex => "-1", :role => "dialog", "aria-labelledby" => "aAlertLabel", "aria-hidden" => "true"}
-      .modal-dialog.modal-sm
+      .modal-dialog
         .modal-content
           .modal-header.bg-primary
             %button.close{:type => "button", "aria-hidden" => true, :data => {dismiss: "modal"}}
