Minor bug fixes.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
     = render partial: "shared/header"
     .container-fluid
       - if flash[:notice]
-        .row
+        .row.ap-top-space
           .col-md-offset-3.col-md-6
             .center-block
               .alert.alert-info.alert-dismissable
