--- a/app/views/organizations/index.html.haml
+++ b/app/views/organizations/index.html.haml
@@ -1,5 +1,5 @@
 .row.ap-top-space
   - @organizations.each_slice(@organizations.count / 4) do |organizations_group|
-    .col-lg-3.col-md-4.col-sm-6
+    .col-md-3.col-sm-6
       - organizations_group.each do |organization|
         = render partial: "organizations/summary", locals: { organization: organization }
