--- a/app/views/global/home.html.haml
+++ b/app/views/global/home.html.haml
@@ -19,14 +19,14 @@
             %li
               .pull-left.ap-advertise-icon
                 %i.fa.fa-search-plus.fa-2x
-              Find organizations who need your help
+              Find organizations who share your passions and need your help
               .clearfix
             %li
               .pull-left.ap-advertise-icon
                 %i.fa.fa-signal.fa-2x
               Start contributing to the causes you believe in now!
               .clearfix
-          %a.btn.btn-primary{:href => organizations_path()}
+          %a.btn.btn-primary.btn-block.btn-lg{:href => organizations_path()}
             Discover the Organizations
   .col-md-4.col-xs-12
     .thumbnail
@@ -45,5 +45,5 @@
                 %i.fa.fa-cubes.fa-2x
               Increase productivity and reach of your organization
               .clearfix
-          %a.btn.btn-primary{:href => new_organization_path()}
+          %a.btn.btn-primary.btn-block.btn-lg{:href => new_organization_path()}
             Try Aperio
