--- a/app/views/organizations/new.html.haml
+++ b/app/views/organizations/new.html.haml
@@ -1,4 +1,4 @@
-.row
+.row.ap-top-space
   .col-md-offset-1.col-md-10
     = form_for @organization, html: { class: "form-horizontal" } do |f|
       .form-group
