--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,56 +14,58 @@
         Posted #{@user.messages.count} Messages
 
     %ul.nav.nav-tabs
-      %li{:class => ("active" unless @user.notifications.empty?)}
-        %a{:href => "#notifications", "data-toggle" => "tab"}
-          Notifications
-          = render partial: "shared/badge", locals: {count: @user.notification_count}
-      %li{:class => ("active" if @user.notifications.empty?)}
+      - if @user == current_user
+        %li{:class => ("active" unless @user.notifications.empty?)}
+          %a{:href => "#notifications", "data-toggle" => "tab"}
+            Notifications
+            = render partial: "shared/badge", locals: {count: @user.notification_count}
+      %li{:class => ("active" if @user.notifications.empty? or @user != current_user)}
         %a{:href => "#timeline", "data-toggle" => "tab"}
           Timeline
 
     .tab-content
-      .tab-pane.pane#notifications{:class => ("active" unless @user.notifications.empty?)}
-        - if @user.notifications.empty?
-          .alert.alert-info
-            Woohoo. Congratulations. No unread notifications.
-        - else
-          %ul.list-group
-            %li.list-group-item.list-group-item-success
-              %a.mark-all-notifications{:href => "#", :title => "Mark all notifications as read", :data => {toggle: "tooltip", ids: @user.notifications.map{|a| a.id}} }
-                %i.fa.fa-check.fa-2x
-              All Notifications
-              = render partial: "shared/badge", locals: {count: @user.notification_count}
-            - @user.notifications.group_by{|n| n.organization}.each do |organization, notifications|
-              %li.list-group-item.list-group-item-info
-                %a.mark-org-notifications{:href => "#", :title => "Mark this organization's notifications as read", :data => {toggle: "tooltip", ids: notifications.map{|a| a.id}, orgid: organization.id }}
+      - if @user == current_user
+        .tab-pane.pane#notifications{:class => ("active" unless @user.notifications.empty?)}
+          - if @user.notifications.empty?
+            .alert.alert-info
+              Woohoo. Congratulations. No unread notifications.
+          - else
+            %ul.list-group
+              %li.list-group-item.list-group-item-success
+                %a.mark-all-notifications{:href => "#", :title => "Mark all notifications as read", :data => {toggle: "tooltip", ids: @user.notifications.map{|a| a.id}} }
                   %i.fa.fa-check.fa-2x
-                %a{:href => organization_path(organization)}
-                  #{organization.name}
-                = render partial: "shared/badge", locals: {count: @user.notification_count(organization: organization)}
-              - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
-                -# Conversation == nil means notifications are special
-                - if conversation.nil?
-                  - notifications.sort_by{|n| n.created_at}.each do |notification|
-                    %li.list-group-item
-                      %a.mark-notification{:href => "#", :title => "Mark notification as read", :data => {toggle: "tooltip", id: notification.id, organization: organization.id} }
-                        %i.fa.fa-check
-                      -# This is a JOIN_GROUP action. Should handle better when we have more actions
-                      #{notification.action.user.email} has joined
-                      %a{:href => organization_path(organization, group: notification.action.actionable)}
-                        #{notification.action.actionable.name}
-                      %small
-                        = l notification.created_at, format: :short
-                - else
-                  - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
-                    %li.list-group-item
-                      %a.mark-notification{:href => "#", :title => "Mark notification as read", :data => {toggle: "tooltip", ids: notifications.map{|n| n.id}, organization: organization.id} }
-                        %i.fa.fa-check
-                      #{notifications.map{|n| n.action.user.email}.uniq.join(" ")} has posted to
-                      %a{:href => conversation_path(conversation)}
-                        #{conversation.title}
+                All Notifications
+                = render partial: "shared/badge", locals: {count: @user.notification_count}
+              - @user.notifications.group_by{|n| n.organization}.each do |organization, notifications|
+                %li.list-group-item.list-group-item-info
+                  %a.mark-org-notifications{:href => "#", :title => "Mark this organization's notifications as read", :data => {toggle: "tooltip", ids: notifications.map{|a| a.id}, orgid: organization.id }}
+                    %i.fa.fa-check.fa-2x
+                  %a{:href => organization_path(organization)}
+                    #{organization.name}
+                  = render partial: "shared/badge", locals: {count: @user.notification_count(organization: organization)}
+                - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
+                  -# Conversation == nil means notifications are special
+                  - if conversation.nil?
+                    - notifications.sort_by{|n| n.created_at}.each do |notification|
+                      %li.list-group-item
+                        %a.mark-notification{:href => "#", :title => "Mark notification as read", :data => {toggle: "tooltip", id: notification.id, organization: organization.id} }
+                          %i.fa.fa-check
+                        -# This is a JOIN_GROUP action. Should handle better when we have more actions
+                        #{notification.action.user.email} has joined
+                        %a{:href => organization_path(organization, group: notification.action.actionable)}
+                          #{notification.action.actionable.name}
+                        %small
+                          = l notification.created_at, format: :short
+                  - else
+                    - notifications.group_by{|n| n.conversation}.each do |conversation, notifications|
+                      %li.list-group-item
+                        %a.mark-notification{:href => "#", :title => "Mark notification as read", :data => {toggle: "tooltip", ids: notifications.map{|n| n.id}, organization: organization.id} }
+                          %i.fa.fa-check
+                        #{notifications.map{|n| n.action.user.email}.uniq.join(" ")} has posted to
+                        %a{:href => conversation_path(conversation)}
+                          #{conversation.title}
 
-      .tab-pane.pane#timeline{:class => ("active" if @user.notifications.empty?)}
+      .tab-pane.pane#timeline{:class => ("active" if @user.notifications.empty? or @user != current_user)}
         %ul.list-group
           - @user.actions.where(action_type: [Action::Type::JOIN_GROUP, Action::Type::START_CONVERSATION]).each do |action|
             %li.list-group-item
