--- a/app/views/organizations/show.html.haml
+++ b/app/views/organizations/show.html.haml
@@ -5,7 +5,7 @@
         .btn-group.pull-right.a-corner-action.visible-xs
           %a.btn.btn-info.btn-sm.ap-collapse-org-info{:href => "#", :title => "Show / Hide organization info", :data => {tooltip: "tooltip", container: 'body', toggle: "collapse", target: "#organization-info"} }
             %i.fa.fa-chevron-down.fa-lg
-          - if @organization.member?(current_user) && (@group.nil? || @group.member?(current_user))
+          - if can_start_conversation?(@group, current_user)
             %a.btn.btn-info.btn-sm{:href => new_conversation_path(organization: @organization.id), :title => "Start Conversation", :data => {toggle: "tooltip", container: 'body'} }
               %i.fa.fa-pencil.fa-lg
           %a.btn.btn-info.btn-sm{:href => "#", :title => "Groups", :data => {tooltip: "tooltip", container: 'body', toggle: "offcanvas", target: "#org-row"} }
@@ -13,15 +13,12 @@
         .btn-group.pull-right.a-corner-action.visible-sm.visible-md.visible-lg
           %a.btn.btn-info.btn-sm.ap-collapse-org-info{:href => "#", :title => "Show / Hide organization info", :data => {tooltip: "tooltip", container: 'body', toggle: "collapse", target: "#organization-info"} }
             %i.fa.fa-chevron-down.fa-lg
-          - if @organization.member?(current_user) && (@group.nil? || @group.member?(current_user))
+          - if can_start_conversation?(@group, current_user)
             %a.btn.btn-info.btn-sm{:href => new_conversation_path(organization: @organization.id), :title => "Start Conversation", :data => {toggle: "tooltip", container: 'body'} }
               %i.fa.fa-pencil.fa-lg
-          - if @organization.admin?(current_user)
+          - if can_manage_organization?(@organization, current_user)
             %a.btn.btn-info.btn-sm{:href => organization_manage_path(@organization), :title => "Manage Organization", :data => {toggle: "tooltip", container: 'body'} }
               %i.fa.fa-gear.fa-lg
-        - unless @organization.member?(current_user)
-          .pull-right
-            = render partial: "shared/button_to", locals: {target: organization_join_path(@organization), value: "", icon: "fa fa-sign-in fa-lg", block:false, title: "Join"}
         %h4
           %a{:href => organization_path(@organization)}
             #{@organization.name}
@@ -44,7 +41,32 @@
           %li
             = @organization.description
       %li
-        = render partial: "conversations/index", locals: { conversations: filter_conversations(@organization.conversations, group: @group, user: current_user), user: current_user, organization: @organization, group: @group}
+        - if @group.private
+          - if !@group.member?(current_user)
+            .row.ap-top-space
+              .alert.alert-info
+                This group is private and membership is by invitation only. Please contact the owners of the organization if you would like to be added to this group.
+          - else
+            = render partial: "conversations/index", locals: { conversations: filter_conversations(@organization.conversations, group: @group, user: current_user)}
+        - else
+          - if @organization.member?(current_user)
+            .row.ap-top-space
+              - if !@group.member?(current_user)
+                .alert.alert-info
+                  You are not a member of this group yet
+                %center
+                  %form.form-inline{:role => "button_to", :action => group_join_path(group), :method => :post}
+                    %input{:name => "authenticity_token", :type => "hidden", :value => form_authenticity_token}
+                    %button.btn.btn-primary.btn-lg{:type => "submit", :title => "Join Group", :data => {toggle: "tooltip"}}
+                      Join Group
+              = render partial: "conversations/index", locals: { conversations: filter_conversations(@organization.conversations, group: @group, user: current_user)}
+          - else
+            .row.ap-top-space
+              .alert.alert-info
+                You are not a member of this organization yet
+              %center
+                = render partial: "shared/button_to", locals: {target: group_join_path(@organization.default_group), value: "Join Organization", icon: "", block: false, title: "Join Organization"}
+              = render partial: "conversations/index", locals: { conversations: filter_conversations(@organization.conversations, group: @group, user: current_user)}
   .mo-sidebar-offcanvas.col-xs-6.col-sm-4.col-md-3
     %h3
       Groups
